--- a/app/src/main/res/layout/activity_mapbox_input.xml
+++ b/app/src/main/res/layout/activity_mapbox_input.xml
@@ -83,7 +83,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/register_button"
+            android:background="@color/colorAccent"
             android:paddingLeft="35dp"
             android:paddingRight="30dp"
             android:text="Go to Destination"
