--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#2AA2B3</color>
     <color name="white">#ffffff</color>
     <color name="red_color">#038B91</color>
     <color name="cream">#EEDBC7</color>
